buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id "org.jetbrains.intellij" version "0.4.16"
}

apply plugin: 'idea'
apply plugin: 'org.jetbrains.intellij'
apply plugin: 'java'

repositories {
    mavenLocal()
    jcenter()
}

intellij {
    version '2018.2.3'

//    version 'IC-2016.3' //IntelliJ IDEA 2016.3 dependency; for a full list of IntelliJ IDEA releases please see https://www.jetbrains.com/intellij-repository/releases
    plugins 'coverage' //Bundled plugin dependencies
    pluginName 'generator'
    dependencies {
        compile group: 'org.freemarker', name: 'freemarker', version: '2.3.28'
//        compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
    }
}

group 'net.shaidullin'
version '1.0'

dependencies {
//    testCompile group: 'org.testng', name: 'testng', version: '6.14.3'

}

sourceCompatibility = 1.8
